Fixed some maintainability issues